[metadata]
name = pollman
version = 0.1.0
summary = Ceilometer External Pollster
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    pollman

[entry_points]
ceilometer.discover =
    pollman = pollman.discovery:PollmanDiscovery

ceilometer.poll.central =
    weather.temperature = pollman.polling:PollmanPollster

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = true
autodoc_index_modules = true
